--- a/src/webparts/peopleDirectory/PeopleDirectoryWebPart.manifest.json
+++ b/src/webparts/peopleDirectory/PeopleDirectoryWebPart.manifest.json
@@ -16,7 +16,7 @@
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
     "group": { "default": "Other" },
-    "title": { "default": "People-Directory" },
+    "title": { "default": "People-Directory-Test" },
     "description": { "default": "People directory to find users from the organization" },
     "officeFabricIconFontName": "People",
     "properties": {
